--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -20,7 +20,7 @@
     <div class="item">
 
       <span class="project-title">
-        <a href="{{ project.link }}">{{ project.title }}</a>
+        {{ project.title }}
       </span>
 
       {% if project.tagline %}
